[project]
name = "khushfus"
version = "0.2.0"
description = "Enterprise Social Listening Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "vaderSentiment>=3.3.2",
    "opensearch-py>=2.4.0",
    "apscheduler>=3.11.0",
    "weasyprint>=63.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "tweepy>=4.14.0",
    "praw>=7.8.0",
    "google-api-python-client>=2.160.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.49.0",
    "feedparser>=6.0.0",
    "langdetect>=1.0.9",
    "pandas>=2.2.0",
    "matplotlib>=3.10.0",
    "wordcloud>=1.9.0",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.23.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "opentelemetry-instrumentation-httpx>=0.44b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.44b0",
    "opentelemetry-instrumentation-redis>=0.44b0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
# ML dependencies: install with pip install -e ".[ml]"
# Services that don't need NLP (gateway, tenant, identity, etc.) can skip this.
ml = [
    "torch>=2.5.0",
    "transformers>=4.47.0",
    "spacy>=3.8.0",
    "bertopic>=0.16.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "aiosqlite>=0.20.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require database/redis)",
    "slow: Slow tests (ML models, large data)",
]

# =============================================================================
# pytest-cov — coverage configuration (8.15)
# =============================================================================

[tool.coverage.run]
source = [
    "src",
    "services",
    "shared",
]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/node_modules/*",
]
branch = true

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = false
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "^\\s*pass$",
]

[tool.coverage.html]
directory = "htmlcov"
title = "KhushFus Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

# =============================================================================
# mypy — static type checking (8.4)
# =============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Third-party libraries without type stubs — suppress all errors from these
[[tool.mypy.overrides]]
module = [
    "vaderSentiment.*",
    "vaderSentiment.vaderSentiment",
    "redis.*",
    "aiosmtplib.*",
    "feedparser.*",
    "langdetect.*",
    "praw.*",
    "tweepy.*",
    "playwright.*",
    "apscheduler.*",
    "weasyprint.*",
    "wordcloud.*",
    "bertopic.*",
    "spacy.*",
    "transformers.*",
    "torch.*",
    "opensearchpy.*",
    "opentelemetry.*",
    "prometheus_fastapi_instrumentator.*",
    "celery.*",
    "googleapiclient.*",
    "bs4.*",
    "PIL.*",
    "pytesseract.*",
    "whisper.*",
    "python3_saml.*",
    "authlib.*",
    "openpyxl.*",
    "xlsxwriter.*",
]
ignore_missing_imports = true
ignore_errors = true

# =============================================================================
# mutmut — mutation testing (8.14)
# =============================================================================

[tool.mutmut]
paths_to_mutate = "src/,shared/"
tests_dir = "tests/"
runner = "python -m pytest"
use_coverage = false

# =============================================================================
# bumpversion — semantic versioning (8.17)
# =============================================================================

[tool.bumpversion]
current_version = "0.2.0"
commit = true
tag = true
tag_name = "v{new_version}"
message = "chore: bump version {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "frontend/package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'
